--- a/model_server/pyproject.toml
+++ b/model_server/pyproject.toml
@@ -12,6 +12,9 @@ fastapi = {extras = ["all"], version = "^0.95.0"}
 torch = "^2.0.0"
 pillow = "^9.4.0"
 torchvision = "^0.15.1"
+redis = "^4.5.3"
+pika = "^1.3.1"
+aio-pika = "^9.0.5"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -19,11 +22,11 @@ black = "^23.1.0"
 mypy = "^1.1.1"
 isort = "^5.12.0"
 types-pillow = "^9.4.0.17"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
 
 
 [tool.mypy]
@@ -32,6 +35,7 @@ strict = true
 
 [tool.black]
 line_length = 88
+preview = true
 
 [tool.isort]
 profile = "black"
