--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ torchvision = "^0.15.1"
 torch = "^2.0.0"
 pillow = "^9.5.0"
 aio-pika = "^9.0.5"
+motor = "^3.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
