--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,8 @@ flake8 = "^6.0.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.mypy]
+ignore_missing_imports = true
+exclude = [".venv"]
